Fixes layout problems with StaticBubble when body content is short.

--- a/views/shared/css/stylus/neatline/bubble.styl
+++ b/views/shared/css/stylus/neatline/bubble.styl
@@ -33,6 +33,7 @@
     margin-left 0.3em
 
   .title
+    display inline
     font-size 2em
     line-height 1em
 
